first shot overview

--- a/src/angular/manager/src/app/login/component/main/main.component.html
+++ b/src/angular/manager/src/app/login/component/main/main.component.html
@@ -5,5 +5,5 @@
 	<span *ngIf="login !== null"><button mat-button (click)="logout()" i18n>Logout</button></span>
 </mat-toolbar>
 <div style="display:none">
-	<span id="onlineAgainMsg" i18n="@@onlineAgainMsg">You are online again and your token is expired. To reconnect please logout and login again.</span>
+	<span id="onlineAgainMsg" i18n="@@onlineAgainMsg">Your token is expired. To reconnect please logout and login again.</span>
 </div>
