--- a/src/angular/manager/src/app/portfolios/component/overview/overview.component.html
+++ b/src/angular/manager/src/app/portfolios/component/overview/overview.component.html
@@ -5,13 +5,56 @@
 </mat-toolbar>
 <mat-sidenav-container class="container" [ngStyle]="{'height.px': windowHeight}">
   <mat-sidenav opened mode="side" class="contact-list">
-  	<mat-action-list>
-  		<button mat-list-item (click)="selPortfolio()"> Save </button>
-  		<button mat-list-item (click)="selPortfolio()"> Undo </button>
+  	<mat-action-list *ngFor="let portfolio of portfolios">
+  		<button mat-list-item (click)="selPortfolio(portfolio)">{{ portfolio.name }}</button>  		
 	</mat-action-list>
   </mat-sidenav>
   <mat-sidenav-content opened mode="side">
-  	content
+  	<!-- <table mat-table [dataSource]="portfolios">
+
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef i18n> Name </th>
+      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="stocks">
+      <th mat-header-cell *matHeaderCellDef i18n> Stocks </th>
+      <td mat-cell *matCellDef="let element"> {{ !element.symbols ? 0 element.symbols.lenght}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="month1">
+      <th mat-header-cell *matHeaderCellDef i18n> 1 Month </th>
+      <td mat-cell *matCellDef="let element"> {{element.month1}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="month6">
+      <th mat-header-cell *matHeaderCellDef i18n> 6 Months </th>
+      <td mat-cell *matCellDef="let element"> {{element.month6}} </td>
+    </ng-container>
+
+	<ng-container matColumnDef="year1">
+      <th mat-header-cell *matHeaderCellDef i18n> 1 Year </th>
+      <td mat-cell *matCellDef="let element"> {{element.year1}} </td>
+    </ng-container>
+
+	<ng-container matColumnDef="year2">
+      <th mat-header-cell *matHeaderCellDef i18n> 2 Year </th>
+      <td mat-cell *matCellDef="let element"> {{element.year2}} </td>
+    </ng-container>
+
+	<ng-container matColumnDef="year5">
+      <th mat-header-cell *matHeaderCellDef i18n> 5 Year </th>
+      <td mat-cell *matCellDef="let element"> {{element.year5}} </td>
+    </ng-container>
+
+	<ng-container matColumnDef="year10">
+      <th mat-header-cell *matHeaderCellDef i18n> 10 Year </th>
+      <td mat-cell *matCellDef="let element"> {{element.year10}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table> -->
   </mat-sidenav-content>
 </mat-sidenav-container>
 <div style="display:none">
