--- a/src/angular/manager/src/app/portfolios/component/overview/overview.component.scss
+++ b/src/angular/manager/src/app/portfolios/component/overview/overview.component.scss
@@ -7,6 +7,15 @@
     cursor: pointer;
 }
 
+.new-portfolio {
+	width: 100%;
+	height: 56px;
+	display: flex;
+	align-items: center;
+    justify-content: center;
+	cursor: pointer;
+}
+
 .container {		
 }
 
