--- a/src/angular/manager/src/app/portfolios/component/overview/overview.component.html
+++ b/src/angular/manager/src/app/portfolios/component/overview/overview.component.html
@@ -1,6 +1,7 @@
 <mat-toolbar color="primary">
 	<span i18n>Portfolio Manager</span>
 	<span class="example-fill-remaining-space"></span>
+	<span><button mat-button (click)="importSymbols()">Import Symbols</button></span>
 	<span><button mat-button (click)="logout()" i18n>Logout</button></span>
 </mat-toolbar>
 <mat-sidenav-container class="container" [ngStyle]="{'height.px': windowHeight}">
