--- a/src/angular/manager/src/app/portfolios/component/add-symbol/add-symbol.component.scss
+++ b/src/angular/manager/src/app/portfolios/component/add-symbol/add-symbol.component.scss
@@ -1,3 +1,16 @@
 .symbol-data {
 	display: flex;
 }
+
+.symbol-text {
+	font-size: smaller;
+}
+
+.form-field {
+	width: 100%;
+}
+
+.list-style {
+	list-style-type:none;
+	padding-left: 0;
+}
