--- a/src/angular/manager/src/app/portfolios/component/add-symbol/add-symbol.component.html
+++ b/src/angular/manager/src/app/portfolios/component/add-symbol/add-symbol.component.html
@@ -3,10 +3,10 @@
 			<ul class="list-style">
 				<li>
 					<mat-form-field class="form-field"> 
-						<input matInput type="text" [matAutocomplete]="auto" [formControl]="symbolFormControl"
+						<input matInput type="text" [matAutocomplete]="auto" [formControl]="symbolNameFormControl"
 							i18n-placeholder placeholder="symbolName" tabindex="1" (keyup.enter)="findSymbolByName()">
 						<mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
-      						<mat-option *ngFor="let symbol of symbols | async" [value]="symbol.name" class="symbol-text">
+      						<mat-option *ngFor="let symbol of symbolsName | async" [value]="symbol.name" class="symbol-text">
         						Symbol: {{symbol.symbol}} Name: {{symbol.name}}
       						</mat-option>
     					</mat-autocomplete> 
@@ -14,8 +14,13 @@
 				</li>
 				<li>
 					<mat-form-field class="form-field"> 
-						<input matInput type="text"
-							i18n-placeholder placeholder="symbol" tabindex="2" formControlName="symbolSymbol" (keyup.enter)="findSymbolBySymbol()">
+						<input matInput type="text" [matAutocomplete]="auto" [formControl]="symbolNameFormControl"
+							i18n-placeholder placeholder="symbolName" tabindex="1" (keyup.enter)="findSymbolByName()">
+						<mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
+      						<mat-option *ngFor="let symbol of symbolsSymbol | async" [value]="symbol.symbol" class="symbol-text">
+        						Symbol: {{symbol.symbol}} Name: {{symbol.name}}
+      						</mat-option>
+    					</mat-autocomplete> 
 					</mat-form-field>
 				</li>
 				<li *ngIf="!selSymbol && !loading" i18n>
