make the table show the portfolios

--- a/src/angular/manager/src/app/portfolios/component/overview/overview.component.html
+++ b/src/angular/manager/src/app/portfolios/component/overview/overview.component.html
@@ -26,7 +26,7 @@
 
     <ng-container matColumnDef="stocks">
       <th mat-header-cell *matHeaderCellDef i18n> Stocks </th>
-      <td mat-cell *matCellDef="let element"> {{ !element.symbols ? 0 : element.symbols.lenght}} </td>
+      <td mat-cell *matCellDef="let element"> {{ !element.symbols ? 0 : element.symbols.length}} </td>
     </ng-container>
 
     <ng-container matColumnDef="month1">
