--- a/src/angular/manager/src/app/portfolios/component/add-symbol/add-symbol.component.html
+++ b/src/angular/manager/src/app/portfolios/component/add-symbol/add-symbol.component.html
@@ -15,12 +15,17 @@
 				<li>
 					<mat-form-field class="form-field"> 
 						<input matInput type="text" [matAutocomplete]="auto" [formControl]="symbolNameFormControl"
-							i18n-placeholder placeholder="symbolName" tabindex="1" (keyup.enter)="findSymbolByName()">
+							i18n-placeholder placeholder="symbolName" tabindex="2" (keyup.enter)="findSymbolByName()">
 						<mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
       						<mat-option *ngFor="let symbol of symbolsSymbol | async" [value]="symbol.symbol" class="symbol-text">
         						Symbol: {{symbol.symbol}} Name: {{symbol.name}}
       						</mat-option>
     					</mat-autocomplete> 
+					</mat-form-field>
+				</li>
+				<li>
+					<mat-form-field class="form-field"> 
+						<input matInput type="text" formControlName="weight" i18n-placeholder placeholder="weight" tabindex="3">
 					</mat-form-field>
 				</li>
 				<li *ngIf="!selSymbol && !loading" i18n>
