--- a/src/angular/manager/src/app/portfolios/component/add-symbol/add-symbol.component.scss
+++ b/src/angular/manager/src/app/portfolios/component/add-symbol/add-symbol.component.scss
@@ -1,9 +1,5 @@
-.symbol-data {
-	display: flex;
-}
-
-.symbol-text {
-	font-size: smaller;
+.symbol-element {
+	margin: 5px 0;
 }
 
 .form-field {
@@ -13,4 +9,19 @@
 .list-style {
 	list-style-type:none;
 	padding-left: 0;
+}
+
+.container {
+	display: flex;	
+	width: 100%;	
+	justify-content: center;
+	align-content: center;
+}
+
+.content {
+	margin-top: 50px;
+}
+
+.example-margin {
+  margin: 0 10px;
 }
