quote import fixes

--- a/src/angular/manager/src/app/portfolios/component/add-symbol/add-symbol.component.html
+++ b/src/angular/manager/src/app/portfolios/component/add-symbol/add-symbol.component.html
@@ -48,7 +48,7 @@
 	</form>
 	<div *ngIf="importingQuotes">
 		<div class="container">
-			<div class="content" i18n>Importing Quotes...</div>							
+			<div i18n>Importing Quotes...</div>							
 		</div>
 		<div class="container">
 			<div class="content">
