--- a/src/angular/manager/src/app/portfolios/component/overview/overview.component.html
+++ b/src/angular/manager/src/app/portfolios/component/overview/overview.component.html
@@ -1,6 +1,13 @@
 <mat-toolbar color="primary">
 	<span i18n>Portfolio Manager</span>
 	<span class="example-fill-remaining-space"></span>
+	<span class="custom-spinner" *ngIf="importingSymbols">
+		<mat-progress-spinner
+					diameter="32" 
+					mode="indeterminate"
+					color="primary">
+		</mat-progress-spinner>
+	</span>
 	<span><button mat-button (click)="importSymbols()">Import Symbols</button></span>
 	<span><button mat-button (click)="logout()" i18n>Logout</button></span>
 </mat-toolbar>
