add portfolio-detail component

--- a/src/angular/manager/src/app/portfolios/component/portfolio/portfolio.component.html
+++ b/src/angular/manager/src/app/portfolios/component/portfolio/portfolio.component.html
@@ -19,6 +19,6 @@
 		</mat-action-list>	
 	</mat-sidenav>
 	<mat-sidenav-content opened mode="side">
-	
+		<app-symbol symbol="selSymbol"></app-symbol>
 	</mat-sidenav-content>
 </mat-sidenav-container>
