--- a/src/angular/manager/src/app/portfolios/component/overview/overview.component.html
+++ b/src/angular/manager/src/app/portfolios/component/overview/overview.component.html
@@ -8,7 +8,7 @@
 					color="primary">
 		</mat-progress-spinner>
 	</span>
-	<span><button mat-button (click)="importSymbols()" i18n>Import Symbols</button></span>
+	<span class="import-symbols"><button mat-button (click)="importSymbols()" i18n>Import Symbols</button></span>
 	<span><button mat-button (click)="logout()" i18n>Logout</button></span>
 </mat-toolbar>
 <mat-sidenav-container class="container" [ngStyle]="{'height.px': windowHeight}">
