--- a/src/angular/manager/src/app/portfolios/component/overview/overview.component.html
+++ b/src/angular/manager/src/app/portfolios/component/overview/overview.component.html
@@ -1,3 +1,4 @@
+<div>
 <mat-toolbar color="primary">
 	<span i18n>Portfolio Manager</span>
 	<span class="example-fill-remaining-space"></span>
@@ -28,42 +29,42 @@
 
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef i18n> Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      <td mat-cell *matCellDef="let element" class="table-cell"> {{element.name}} </td>
     </ng-container>
 
     <ng-container matColumnDef="stocks">
       <th mat-header-cell *matHeaderCellDef i18n> Stocks </th>
-      <td mat-cell *matCellDef="let element"> {{ !element.symbols ? 0 : element.symbols.length}} </td>
+      <td mat-cell *matCellDef="let element" class="table-cell"> {{ !element.symbols ? 0 : element.symbols.length}} </td>
     </ng-container>
 
     <ng-container matColumnDef="month1">
       <th mat-header-cell *matHeaderCellDef i18n> 1 Month </th>
-      <td mat-cell *matCellDef="let element"> {{element.month1}} </td>
+      <td mat-cell *matCellDef="let element" class="table-cell"> {{element.month1}} </td>
     </ng-container>
 
     <ng-container matColumnDef="month6">
       <th mat-header-cell *matHeaderCellDef i18n> 6 Months </th>
-      <td mat-cell *matCellDef="let element"> {{element.month6}} </td>
+      <td mat-cell *matCellDef="let element" class="table-cell"> {{element.month6}} </td>
     </ng-container>
 
 	<ng-container matColumnDef="year1">
       <th mat-header-cell *matHeaderCellDef i18n> 1 Year </th>
-      <td mat-cell *matCellDef="let element"> {{element.year1}} </td>
+      <td mat-cell *matCellDef="let element" class="table-cell"> {{element.year1}} </td>
     </ng-container>
 
 	<ng-container matColumnDef="year2">
       <th mat-header-cell *matHeaderCellDef i18n> 2 Year </th>
-      <td mat-cell *matCellDef="let element"> {{element.year2}} </td>
+      <td mat-cell *matCellDef="let element" class="table-cell"> {{element.year2}} </td>
     </ng-container>
 
 	<ng-container matColumnDef="year5">
       <th mat-header-cell *matHeaderCellDef i18n> 5 Year </th>
-      <td mat-cell *matCellDef="let element"> {{element.year5}} </td>
+      <td mat-cell *matCellDef="let element" class="table-cell"> {{element.year5}} </td>
     </ng-container>
 
 	<ng-container matColumnDef="year10">
       <th mat-header-cell *matHeaderCellDef i18n> 10 Year </th>
-      <td mat-cell *matCellDef="let element"> {{element.year10}} </td>
+      <td mat-cell *matCellDef="let element" class="table-cell"> {{element.year10}} </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
@@ -73,4 +74,5 @@
 </mat-sidenav-container>
 <div style="display:none">
 	<span id="onlineAgainMsg" i18n="@@onlineAgainMsg">Your token is expired. To reconnect please logout and login again.</span>
+</div>
 </div>
