--- a/src/angular/manager/src/app/portfolios/component/symbol/symbol.component.scss
+++ b/src/angular/manager/src/app/portfolios/component/symbol/symbol.component.scss
@@ -17,3 +17,13 @@
 .text-container {
 	margin-bottom: 10px;
 }
+
+.chart-container {
+	height: calc(100% - 100px);
+	width: 100%;
+}
+
+.base-container {
+	height: 100%;
+	width: 100%;
+}
