--- a/src/angular/manager/src/app/portfolios/component/overview/overview.component.html
+++ b/src/angular/manager/src/app/portfolios/component/overview/overview.component.html
@@ -17,7 +17,7 @@
   	<div class="new-portfolio">
   		<button mat-raised-button (click)="newPortfolio()" i18n>New Portfolio</button>
   	</div>
-  	<mat-action-list *ngFor="let portfolio of portfolios.data">
+  	<mat-action-list *ngFor="let portfolio of portfolios">
   		<div class="portfolio-line">
   			<button mat-list-item (click)="selPortfolio(portfolio)">{{ portfolio.name }}</button>
   			<button mat-list-item (click)="addSymbol(portfolio)" class="add-button"><mat-icon>add</mat-icon></button>  			
@@ -25,51 +25,7 @@
 	</mat-action-list>
   </mat-sidenav>
   <mat-sidenav-content opened mode="side">
-  	<table mat-table [dataSource]="portfolios">
-
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef i18n> Name </th>
-      <td mat-cell *matCellDef="let element" class="table-cell"> {{element.name}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="stocks">
-      <th mat-header-cell *matHeaderCellDef i18n> Stocks </th>
-      <td mat-cell *matCellDef="let element" class="table-cell"> {{ !element.symbols ? 0 : element.symbols.length}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="month1">
-      <th mat-header-cell *matHeaderCellDef i18n> 1 Month </th>
-      <td mat-cell *matCellDef="let element" class="table-cell"> {{element.month1}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="month6">
-      <th mat-header-cell *matHeaderCellDef i18n> 6 Months </th>
-      <td mat-cell *matCellDef="let element" class="table-cell"> {{element.month6}} </td>
-    </ng-container>
-
-	<ng-container matColumnDef="year1">
-      <th mat-header-cell *matHeaderCellDef i18n> 1 Year </th>
-      <td mat-cell *matCellDef="let element" class="table-cell"> {{element.year1}} </td>
-    </ng-container>
-
-	<ng-container matColumnDef="year2">
-      <th mat-header-cell *matHeaderCellDef i18n> 2 Year </th>
-      <td mat-cell *matCellDef="let element" class="table-cell"> {{element.year2}} </td>
-    </ng-container>
-
-	<ng-container matColumnDef="year5">
-      <th mat-header-cell *matHeaderCellDef i18n> 5 Year </th>
-      <td mat-cell *matCellDef="let element" class="table-cell"> {{element.year5}} </td>
-    </ng-container>
-
-	<ng-container matColumnDef="year10">
-      <th mat-header-cell *matHeaderCellDef i18n> 10 Year </th>
-      <td mat-cell *matCellDef="let element" class="table-cell"> {{element.year10}} </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selPortfolio(row)"></tr>
-  </table>
+	<app-portfolio-table [myPortfolios]="portfolios" *ngIf="showPortfolioTable"></app-portfolio-table>
   </mat-sidenav-content>
 </mat-sidenav-container>
 <div style="display:none">
