--- a/src/angular/manager/src/app/portfolios/component/overview/overview.component.html
+++ b/src/angular/manager/src/app/portfolios/component/overview/overview.component.html
@@ -25,7 +25,7 @@
 	</mat-action-list>
   </mat-sidenav>
   <mat-sidenav-content opened mode="side">
-	<app-portfolio-table [myPortfolios]="portfolios" *ngIf="showPortfolioTable"></app-portfolio-table>
+	<app-portfolio-table [localPortfolios]="portfolios" *ngIf="showPortfolioTable"></app-portfolio-table>
   </mat-sidenav-content>
 </mat-sidenav-container>
 <div style="display:none">
