--- a/src/angular/manager/src/app/portfolios/component/portfolio-table/portfolio-table.component.html
+++ b/src/angular/manager/src/app/portfolios/component/portfolio-table/portfolio-table.component.html
@@ -13,32 +13,32 @@
 
     <ng-container matColumnDef="month1">
       <th mat-header-cell *matHeaderCellDef i18n> 1 Month </th>
-      <td mat-cell *matCellDef="let element" class="table-cell"> {{element.month1}} </td>
+      <td mat-cell *matCellDef="let element" class="table-cell"> {{!element.month1 ? '--' : element.month1}} </td>
     </ng-container>
 
     <ng-container matColumnDef="month6">
       <th mat-header-cell *matHeaderCellDef i18n> 6 Months </th>
-      <td mat-cell *matCellDef="let element" class="table-cell"> {{element.month6}} </td>
+      <td mat-cell *matCellDef="let element" class="table-cell"> {{!element.months6 ? '--' : element.months6}} </td>
     </ng-container>
 
 	<ng-container matColumnDef="year1">
       <th mat-header-cell *matHeaderCellDef i18n> 1 Year </th>
-      <td mat-cell *matCellDef="let element" class="table-cell"> {{element.year1}} </td>
+      <td mat-cell *matCellDef="let element" class="table-cell"> {{!element.year1 ? '--' : element.year1}} </td>
     </ng-container>
 
 	<ng-container matColumnDef="year2">
       <th mat-header-cell *matHeaderCellDef i18n> 2 Year </th>
-      <td mat-cell *matCellDef="let element" class="table-cell"> {{element.year2}} </td>
+      <td mat-cell *matCellDef="let element" class="table-cell"> {{!element.year2 ? '--' : element.year2}} </td>
     </ng-container>
 
 	<ng-container matColumnDef="year5">
       <th mat-header-cell *matHeaderCellDef i18n> 5 Year </th>
-      <td mat-cell *matCellDef="let element" class="table-cell"> {{element.year5}} </td>
+      <td mat-cell *matCellDef="let element" class="table-cell"> {{!element.year5 ? '--' : element.year5}} </td>
     </ng-container>
 
 	<ng-container matColumnDef="year10">
       <th mat-header-cell *matHeaderCellDef i18n> 10 Year </th>
-      <td mat-cell *matCellDef="let element" class="table-cell"> {{element.year10}} </td>
+      <td mat-cell *matCellDef="let element" class="table-cell"> {{!element.year10 ? '--' : element.year10}} </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
