--- a/src/angular/manager/src/app/portfolios/component/portfolio-table/portfolio-table.component.html
+++ b/src/angular/manager/src/app/portfolios/component/portfolio-table/portfolio-table.component.html
@@ -18,7 +18,7 @@
 
     <ng-container matColumnDef="month6">
       <th mat-header-cell *matHeaderCellDef i18n> 6 Months </th>
-      <td mat-cell *matCellDef="let element" class="table-cell"> {{!element.months6 ? '--' : element.months6}} </td>
+      <td mat-cell *matCellDef="let element" class="table-cell"> {{!element.month6 ? '--' : element.month6}} </td>
     </ng-container>
 
 	<ng-container matColumnDef="year1">
