--- a/src/angular/manager/src/app/portfolios/component/symbol/symbol.component.html
+++ b/src/angular/manager/src/app/portfolios/component/symbol/symbol.component.html
@@ -1,6 +1,6 @@
 <div class="base-container">
 <div>
-	<div class="text-container" i18n>Symbol: {{!symbol ? 'none' : symbol.symbol}} Name: {{!symbol ? 'none' : symbol.name}}</div>
+	<div class="text-container" i18n>Symbol: {{!symbol ? 'none' : replacePortfolioSymbol(symbol.symbol)}} Name: {{!symbol ? 'none' : symbol.name}}</div>
 	<div class="text-container">
 		<span class="symbol-data" i18n>Start Date: {{!symbolData.start ? '' : symbolData.start | date:'mediumDate' }}</span>
 		<span class="symbol-data" i18n>End Date: {{!symbolData.end ? '' : symbolData.end | date:'mediumDate' }}</span>
@@ -17,7 +17,7 @@
 	  aria-labelledby="my-radio-group-label"
 	  class="my-radio-group" (change)="quotePeriodChanged()"
 	  [(ngModel)]="selQuotePeriod">
-	  <mat-radio-button class="my-radio-button" *ngFor="let myQuotePeriod of quotePeriods" [value]="myQuotePeriod">
+	  <mat-radio-button class="my-radio-button" *ngFor="let myQuotePeriod of quotePeriods" [value]="myQuotePeriod" [disabled]="myQuotePeriod.quotePeriodKey === quotePeriodKeyDay && isPortfolioSymbol(symbol)">
 	    {{myQuotePeriod.periodText}}
 	  </mat-radio-button>
 	</mat-radio-group>
