--- a/src/angular/manager/src/app/portfolios/component/symbol/symbol.component.html
+++ b/src/angular/manager/src/app/portfolios/component/symbol/symbol.component.html
@@ -7,8 +7,13 @@
 		<span class="symbol-data" i18n>Open: {{!symbolData.open ? '' :  symbolData.open | number:'1.2-2'}}</span>
 		<span class="symbol-data" i18n>High: {{!symbolData.high ? '' :  symbolData.high | number:'1.2-2'}}</span>
 		<span class="symbol-data" i18n>Low: {{!symbolData.low ? '' :  symbolData.low | number:'1.2-2'}}</span>
-		<span class="symbol-data" i18n>Close: {{!symbolData.close ? '' :  symbolData.close | number:'1.2-2'}}</span>
+		<span class="symbol-data" i18n>Close: {{!symbolData.close ? '' :  symbolData.close | number:'1.2-2'}}</span>		
+	</div>
+	<div class="text-container">
 		<span class="symbol-data" i18n>Average Volume: {{!symbolData.avgVolume ? '' : symbolData.avgVolume | number:'1.0-0' }}</span>
+		<span class="symbol-data" i18n>Average Close: {{!symbolData.avgClose ? '' :  symbolData.avgClose | number:'1.2-2'}}</span>
+		<span class="symbol-data" i18n>Median Close: {{!symbolData.medianClose ? '' :  symbolData.medianClose | number:'1.2-2'}}</span>
+		<span class="symbol-data" i18n>Volatility Close: {{!symbolData.volatilityClose ? '' :  (symbolData.volatilityClose * 100) | number:'1.2-2'}}%</span>
 	</div>
 </div>
 <div class="text-container">
