--- a/src/angular/manager/src/app/portfolios/component/symbol/symbol.component.html
+++ b/src/angular/manager/src/app/portfolios/component/symbol/symbol.component.html
@@ -30,9 +30,9 @@
 <div class="text-container">
 	<label id="my-checkbox-group-label" i18n>Pick your comparison index:</label>
 	<span>
-		<mat-checkbox [disabled]="!quotesLoading" (change)="compIndexUpdate($event.checked, ComparisonIndex.EUROSTOXX50)" i18n>EuroStoxx 50</mat-checkbox>
-		<mat-checkbox [disabled]="!quotesLoading" (change)="compIndexUpdate($event.checked, ComparisonIndex.MSCI_CHINA)" i18n>Msci China</mat-checkbox>
-		<mat-checkbox [disabled]="!quotesLoading" (change)="compIndexUpdate($event.checked, ComparisonIndex.SP500)" i18n>S&P 500</mat-checkbox>
+		<mat-checkbox class="my-checkbox" [disabled]="quotesLoading" (change)="compIndexUpdate($event.checked, ComparisonIndex.EUROSTOXX50)" i18n>EuroStoxx 50</mat-checkbox>
+		<mat-checkbox class="my-checkbox" [disabled]="quotesLoading" (change)="compIndexUpdate($event.checked, ComparisonIndex.MSCI_CHINA)" i18n>Msci China</mat-checkbox>
+		<mat-checkbox class="my-checkbox" [disabled]="quotesLoading" (change)="compIndexUpdate($event.checked, ComparisonIndex.SP500)" i18n>S&P 500</mat-checkbox>
 	</span>
 </div>
 <div *ngIf="!symbol" class="chart-container center-div">
