--- a/src/angular/manager/src/app/portfolios/component/symbol/symbol.component.scss
+++ b/src/angular/manager/src/app/portfolios/component/symbol/symbol.component.scss
@@ -9,7 +9,9 @@
 .my-radio-button {
 	margin: 0 10px;
 }
-
+.my-checkbox {
+	margin-left: 10px;
+}
 .symbol-data {
 	margin-right: 10px;
 }
@@ -19,7 +21,7 @@
 }
 
 .chart-container {
-	height: calc(100% - 120px);
+	height: calc(100% - 160px);
 	width: 100%;
 }
 
