--- a/src/angular/manager/src/app/portfolios/component/symbol/symbol.component.html
+++ b/src/angular/manager/src/app/portfolios/component/symbol/symbol.component.html
@@ -39,6 +39,7 @@
 	<div i18>Please select an instrument</div>
 </div>
 <div *ngIf="symbol" #chartContainer class="chart-container">
+	<!-- sc-line-chart [chartPoints]="chartPoints"></sc-line-chart-->			
 	<ngx-charts-line-chart	
 	  [legend]="legend"
 	  [showXAxisLabel]="showXAxisLabel"
