--- a/src/angular/manager/src/app/portfolios/component/overview/overview.component.html
+++ b/src/angular/manager/src/app/portfolios/component/overview/overview.component.html
@@ -2,14 +2,15 @@
 <mat-toolbar color="primary">
 	<span i18n>Portfolio Manager</span>
 	<span class="example-fill-remaining-space"></span>
-	<span class="custom-spinner" *ngIf="importingSymbols">
+	<span class="header-space"><button mat-button (click)="showConfig()" i18n>Config</button></span>
+	<span class="custom-spinner header-space" *ngIf="importingSymbols">
 		<mat-progress-spinner
 					diameter="32" 
 					mode="indeterminate"
 					color="primary">
 		</mat-progress-spinner>
 	</span>
-	<span class="import-symbols"><button mat-button (click)="importSymbols()" i18n>Import Symbols</button></span>
+	<span class="header-space"><button mat-button (click)="importSymbols()" i18n>Import Symbols</button></span>
 	<span><button mat-button (click)="logout()" i18n>Logout</button></span>
 </mat-toolbar>
 <mat-sidenav-container class="container" [ngStyle]="{'height.px': windowHeight}">
