--- a/src/angular/manager/src/app/portfolios/component/prod-config/prod-config.component.html
+++ b/src/angular/manager/src/app/portfolios/component/prod-config/prod-config.component.html
@@ -1,13 +1,13 @@
 <div mat-dialog-content>
+<div class="my-header">
+		<h2><span i18n>Prod Config Values</span></h2>
+	</div>
 	<ul>
 		<li>
-			<span i18n>Prod Config Values</span>		
-		</li>
-		<li>
 			<mat-label i18n>Classname: </mat-label><span>{{classNameObs | async}}</span>
-		</li>
-		<li>
-			<button mat-button (click)="closeDialog()" i18n>Close</button>
-		</li>
+		</li>		
 	</ul>
+	<div class="my-button">
+		<button mat-button (click)="closeDialog()" i18n>Close</button>
+	</div>	
 </div>
