--- a/src/angular/manager/src/app/portfolios/components/portfolio-charts/portfolio-charts.component.html
+++ b/src/angular/manager/src/app/portfolios/components/portfolio-charts/portfolio-charts.component.html
@@ -1,7 +1,7 @@
-<div class="myContainer">
-<div>
-	<span i18n="@@PortfolioChartName">Portfolio: {{selPortfolio.name}}</span> 
-	<span i18n="@@PortfolioChartStartDate">Start Date: {{startDate}}</span>
+<div class="my-container">
+<div class="text-container">
+	<span class="my-span" i18n="@@PortfolioChartName">Portfolio: {{selPortfolio.name}}</span> 
+	<span class="my-span" i18n="@@PortfolioChartStartDate">Start Date: {{startDate | date:'d.M.yyyy'}}</span>
 </div>
 <div class="text-container">
 	<label id="my-radio-group-label" i18n>Pick your timeframe:</label>
@@ -9,8 +9,8 @@
 	  aria-labelledby="my-radio-group-label"
 	  class="my-radio-group" (change)="chartPeriodChanged()"
 	  [(ngModel)]="selChartPeriod">
-	  <mat-radio-button class="my-radio-button" *ngFor="let myQuotePeriod of chartPeriods" [value]="myChartPeriod" [disabled]="chartsLoading">
-	    {{myQuotePeriod.periodText}}
+	  <mat-radio-button class="my-radio-button" *ngFor="let myChartPeriod of chartPeriods" [value]="myChartPeriod" [disabled]="chartsLoading">
+	    {{myChartPeriod.periodText}}
 	  </mat-radio-button>
 	</mat-radio-group>
 </div>
@@ -22,7 +22,12 @@
 		<mat-checkbox class="my-checkbox" [(ngModel)]="showSP500" [disabled]="chartsLoading" (change)="compIndexUpdate($event.checked, ComparisonIndex.SP500)" i18n>S&P 500</mat-checkbox>
 	</span>
 </div>
-<div>
-	Test
+<div *ngIf="chartsLoading" class="center-div">
+	<mat-progress-spinner			
+			mode="indeterminate"
+			color="primary"></mat-progress-spinner>
+</div>
+<div *ngIf="!chartsLoading">
+	test chart
 </div>
 </div>
