--- a/src/angular/manager/src/app/portfolios/components/portfolio-charts/portfolio-charts.component.html
+++ b/src/angular/manager/src/app/portfolios/components/portfolio-charts/portfolio-charts.component.html
@@ -27,7 +27,7 @@
 			mode="indeterminate"
 			color="primary"></mat-progress-spinner>
 </div>
-<div *ngIf="!chartsLoading">
-	test chart
+<div *ngIf="!chartsLoading" class="chart-container">
+	<sc-bar-chart [chartBars]="chartBars"></sc-bar-chart>
 </div>
 </div>
